<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".UI.EachSemester">

    <Button
        android:id="@+id/button13"
        android:layout_width="166dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="477dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject7"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button12"
        android:layout_width="167dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject7"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button11"
        android:layout_width="167dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="361dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject5"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button9"
        android:layout_width="166dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject4"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button8"
        android:layout_width="167dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="237dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject3"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button10"
        android:layout_width="166dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject6"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="166dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject2"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="167dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="114dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1_subject1"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="1dp"
        android:text="@string/courses"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

</RelativeLayout>