<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button4"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="393dp"
        android:layout_marginEnd="85dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_4"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button5"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_5"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="86dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_2"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="86dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_1"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/white"
        android:text="@string/semester_3"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="1dp"
        android:text="@string/semesters"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

</RelativeLayout>