<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context=".MainActivity3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background4"
        tools:context=".MainActivity3">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="236dp"
            android:layout_marginBottom="157dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/buttonaddfinalgrade"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="156dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/buttondeletefinalgrade"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="-26dp"
            android:text="Marks Distribution"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="206dp"
            android:layout_marginTop="206dp"
            android:layout_marginEnd="128dp"
            android:text="@string/assignments_marksp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="207dp"
            android:text="@string/assignments"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="234dp"
            android:layout_marginEnd="206dp"
            android:text="@string/exam"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="206dp"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="128dp"
            android:text="@string/exam_marksp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="207dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="128dp"
            android:text="@string/projects_marksp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="173dp"
            android:layout_marginEnd="207dp"
            android:text="@string/projects"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="207dp"
            android:text="@string/quizes"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="205dp"
            android:layout_marginTop="141dp"
            android:layout_marginEnd="128dp"
            android:text="@string/quizes_marksp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/finalgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="445dp"
            android:layout_marginEnd="-1dp"
            android:text="@string/finalgrade"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="1dp"
            android:text="@string/semester_1_subject1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="208dp"
            android:backgroundTint="@color/teal_200"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/entergrade"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>